--- a/Makefile.am
+++ b/Makefile.am
@@ -2,11 +2,11 @@
 SUBDIRS = src icons
 
 desktopdir = $(datadir)/applications
-desktop_DATA = awf.desktop
+desktop_DATA = gtk-widget-factory.desktop
 
 EXTRA_DIST = $(desktop_DATA) \
 	AUTHORS COPYING ChangeLog INSTALL NEWS README autogen.sh \
-	awf.desktop awf.spec
+	gtk-widget-factory.desktop awf.spec
 
 rpm: dist
 	rpmbuild --clean -ta ${distdir}.tar.gz
