--- a/gtk-widget-factory.desktop
+++ b/gtk-widget-factory.desktop
@@ -1,5 +1,5 @@
 [Desktop Entry]
-Name=A widget factory
+Name=GTK widget factory
 Comment=A widget factory - a theme preview application for gtk2 and gtk3
 Exec=awf-gtk2
 Icon=awf
